--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- HEADER : START -->
-    <header class="section-header view register" id="header">
+    <header class="section-header register" id="header">
         <div class="header__wraper">
             <div class="navbar">
                 <div class="navbar__logo">
