--- a/content.html
+++ b/content.html
@@ -58,8 +58,8 @@
                             </li>
                         </ul>
                         <div class="navbar__login">
-                            <a href="#" class="login-name nav-link">Van Si Hung</a>
-                            <a href="#" class="login-user nav-link">User</a>
+                            <a href="#" class="login-name">Van Si Hung</a>
+                            <a href="#" class="login-user">User</a>
                         </div>
                     </div>
                     <div class="menu">
