--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <img srcset="./assets/images/contact-fb.png 2x" alt="">
                     </a>
                 </div>
-                <div class="contact-btn"><a href="#" class="btn contact-link">CONTACT</a></div>
+                <div class="contact-btn"><a href="#" class="contact-link">CONTACT</a></div>
             </div>
         </div>
     </footer>
