--- a/view_02.html
+++ b/view_02.html
@@ -7,7 +7,7 @@
     <title>Mọt Sách</title>
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" type="text/css" href="assets/css/style_06.css"></link>
+    <link rel="stylesheet" type="text/css" href="assets/css/style_01.css"></link>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
@@ -137,11 +137,11 @@
                                     <form id="comment__form" class="comment__form" method="post" action="" name="comment__form" >
                                         <div class="control__input">
                                             <div class="control__input-name">
-                                                <label class="label-name" for="name">Name/Phone:</label>
+                                                <label class="label-name" for="input-name">Name/Phone:</label>
                                                 <input type="text" name="name" id="input-name" />
                                             </div>
                                             <div class="control__input-comment">
-                                                <label class="label-comment" for="comment">Comment</label>
+                                                <label class="label-comment" for="input-comment">Comment</label>
                                                 <input type="text" name="comment" id="input-comment" /> 
                                             </div>
                                         </div>
