--- a/products.html
+++ b/products.html
@@ -217,12 +217,12 @@
                 <div class="products__sidebar-right">
                     <div class="sidebar-right__wraper">
                         <div class="sidebar-right__image">
-                            <img src="./assets/images/products/image07.png" alt="">
+                            <img srcset="./assets/images/products/image07.png 2x" alt="">
                             <h2 class="sidebar-right__title">How Karen Joy Fowler’s Grandfather Lied His Way Into a Who’s Who</h2>
                             <p class="sidebar-right__desc">“In fact, his appearance in this book may have been his greatest single achievement.”</p>
                         </div>
                         <div class="sidebar-right__image">
-                            <img src="./assets/images/products/image09.png" alt="">
+                            <img srcset="./assets/images/products/image09.png 2x" alt="">
                             <h2 class="sidebar-right__title">“He Got a Cigarette Stuck in His Neck, and He Took It Like a Man.’</h2>
                             <p class="sidebar-right__desc">Eli Cranor’s top-shelf debut, “Don’t Know Tough,” is Southern noir at its    finest, a cauldron of terrible choices and even more terrible outcomes.</p>
                         </div>
@@ -257,7 +257,7 @@
                         <img srcset="./assets/images/contact-fb.png 2x" alt="">
                     </a>
                 </div>
-                <div class="contact-btn"><a href="#" class="btn contact-link">CONTACT</a></div>
+                <div class="contact-btn"><a href="#" class="contact-link">CONTACT</a></div>
             </div>
         </div>
     </footer>
